# finite_element_options

./: .gitignore  AGENTS.md  CHANGELOG.md  CONFIG.py  CONTRIBUTING.md  README.md  constraints.txt  demo_adaptive.py  main.py  main_tests.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARCHITECTURE.yaml  CAPABILITY_MATRIX.md  FEM_SOLVER_CONTRACT.md  FORMULA_BUNDLE.md  GREEKS_DIAGNOSTICS.md  MODULE_OWNERSHIP.md  PRD.md  ROADMAP.md  architecture_contract.toml  benchmarking.md
docs/images/: readme_visual_provenance.json
examples/: adaptive_mesh_refinement.py  basic_usage.py  streamlit_app.py
scripts/: check_architecture_contract.py  check_ci_contract.py  check_portfolio_architecture.py  check_readme_examples.py  export_pinares_fixed_price_proxy_fixture.py  generate_capability_docs.py  generate_readme_validation_visuals.py
src/: __init__.py  acceleration.py  cli.py  config.py  dynamics_heston.py  fdsolver.py  jax_greeks.py  market.py  mesh_handler.py  plots.py  sidebar.py  transform.py  vainilla_bs.py  vanilla_bs.py
src/contracts/: __init__.py  backend_capabilities.py
src/core/: config.py  dynamics_black_scholes.py  dynamics_heston.py  dynamics_heston_3d.py  interfaces.py  solver.py  vanilla_bs.py
src/estimation/: README.md  __init__.py  calibrator.py  heston.py
src/examples/: bs_1d.py  calibration_examples.py  credit_risk_jump.py  heston_3d.py  problems_demo.py
src/finite_element_options/: __init__.py  cli.py  data_utils.py  fdsolver.py  jax_greeks.py  plots.py  sidebar.py  transform.py  ui_config.py
src/finite_element_options/core/: __init__.py  (+7 more)
src/problems/: __init__.py  base.py  credit_risk.py  option_pricing.py
src/space/: __init__.py  adaptive.py  boundary.py  fenics_solver.py  forms.py  mesh.py  solver.py
src/time/: __init__.py  base.py  stepper.py  theta.py
src/validation/: __init__.py  black_scholes_parity.py
tests/: test_adaptive_mesh.py  test_american_lcp.py  test_benchmark_black_scholes.py  test_benchmark_fenics.py  test_black_scholes_1d.py  test_black_scholes_semantics.py  test_calibrator.py  test_capability_matrix_docs.py  test_compiled_weak_form_adapter.py  test_credit_risk_model.py  test_data_utils.py  test_domain_boundary.py  test_fd_black_scholes.py  test_fd_reference_backend_contract.py  test_fem_backend_capabilities.py  test_fenics_solver.py  test_formula_bundle.py  test_haircut_backend_adapter.py  test_heston_3d.py  test_heston_moments.py  test_invariants.py  test_jax_greeks.py  test_mesh.py  test_packaging_contract.py  test_pinares_fem_proxy.py  test_problem_presets.py  test_solver.py  test_solver_cache_benchmark.py  test_state_time_coefficients.py  test_time_stepper.py  test_transform.py  test_ui_config.py  test_validation_gates.py  test_vanilla_bs.py
tests/architecture/: README.md  test_architecture_contracts.py  test_ci_contract.py  test_portfolio_architecture.py
tests/e2e/: README.md
tests/integration/: README.md
tests/unit/: README.md
(+65 files in other folders)
