[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finite-element-options"
version = "0.1.0"
description = "Reusable finite-element option pricing and PDE validation toolkit"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
authors = [{ name = "Cristobal" }]
keywords = ["finite-elements", "option-pricing", "pde", "quantitative-finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24,<3",
    "pydantic>=2,<3",
    "scikit-fem>=12.0.2,<13",
    "scipy>=1.10,<2",
]

[project.entry-points."haircut.solver_backends"]
finite_element_options = "finite_element_options.integrations.haircut_backend:create_backend"

[project.optional-dependencies]
fd = [
    "findiff>=0.10,<1",
    "pandas>=2,<3",
    "xarray>=2024.1,<2027",
]
jax = ["jax>=0.4,<1"]
calibration = [
    "arviz>=0.23,<1",
    "pandas>=2,<3",
    "pymc>=5,<6",
    "statsmodels>=0.14,<1",
]
io = [
    "pandas>=2,<3",
    "pyarrow>=23,<24",
    "xarray>=2024.1,<2027",
]
viz = [
    "matplotlib>=3.7,<4",
    "streamlit>=1.30,<2",
]
ui = [
    "matplotlib>=3.7,<4",
    "streamlit>=1.30,<2",
]
validation = [
    "hypothesis>=6,<7",
    "pydocstyle>=6,<7",
    "ruff>=0.8,<1",
    "mypy>=1.10,<2",
    "pytest>=9,<10",
    "pytest-benchmark>=4,<6",
    "pytest-cov>=5,<8",
    "pyyaml>=6,<7",
]
build = [
    "build>=1,<2",
    "twine>=5,<7",
]
dev = [
    "arviz>=0.23,<1",
    "build>=1,<2",
    "findiff>=0.10,<1",
    "hypothesis>=6,<7",
    "jax>=0.4,<1",
    "matplotlib>=3.7,<4",
    "pandas>=2,<3",
    "pydocstyle>=6,<7",
    "ruff>=0.8,<1",
    "mypy>=1.10,<2",
    "pyarrow>=23,<24",
    "pymc>=5,<6",
    "pytest>=9,<10",
    "pytest-benchmark>=4,<6",
    "pytest-cov>=5,<8",
    "pyyaml>=6,<7",
    "statsmodels>=0.14,<1",
    "streamlit>=1.30,<2",
    "twine>=5,<7",
    "xarray>=2024.1,<2027",
]

[project.urls]
Repository = "https://github.com/googa27/finite_element_options"
Issues = "https://github.com/googa27/finite_element_options/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["finite_element_options*"]
exclude = ["src*"]

[tool.setuptools.package-data]
finite_element_options = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--cov=finite_element_options --cov-report=term-missing"
markers = [
    "architecture: architecture and package-boundary fitness checks",
    "packaging: wheel and installed-package import contract checks",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["finite_element_options"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
ignore_missing_imports = true
